Integrated new BFS enemy targeting algo into proj,